package com.mef.parkauto.entity;

public enum EtatTechnique {
    NEUF,
    BON_ETAT,
    ETAT_MOYEN,
    ENTRETIEN_NECESSAIRE,
    ACCIDENTE,
    EN_REPARATION,
    HORS_SERVICE,
    TECHNIQUEMENT_INUTILISABLE
}
