package com.mef.parkauto.entity;
public enum StatutAdministratif {
    DISPONIBLE, AFFECTE, RESERVE, IMMOBILISE,
    EN_ENTRETIEN, EN_REPARATION, EN_MAINTENANCE,
    ACCIDENTE, EN_COURS_REFORME, EN_COURS_DE_REFORME,
    REFORME, VENDU, RESTITUE, ARCHIVE, TRANSFERE
}
