package com.mef.parkauto.entity;

public enum TypeCarburant {
    DIESEL,
    ESSENCE,
    HYBRIDE,
    ELECTRIQUE
}
