@startuml
!include _theme.puml
title Diagramme de classes - Module Vehicules
hide circle
skinparam classAttributeIconSize 0

abstract class BaseEntity {
  - id: Long
  - dateCreation: LocalDateTime
  - dateModification: LocalDateTime
  - createdBy: String
  - updatedBy: String
}

class Vehicule <<Entity>> {
  - immatriculation: String
  - numeroInventaire: String
  - numeroChassis: String
  - marque: String
  - modele: String
  - typeCarburant: TypeCarburant
  - kilometrageActuel: Long
  - montantAcquisition: BigDecimal
  - direction: String
  - service: String
  - dateFinAssurance: LocalDate
  - dateVisiteTechnique: LocalDate
  - prochainSeuilEntretienKm: Long
  - statutAdministratif: StatutAdministratif
  - etatTechnique: EtatTechnique
}

class HistoriqueStatutVehicule <<Entity>> {
  - ancienStatutAdministratif: StatutAdministratif
  - nouveauStatutAdministratif: StatutAdministratif
  - ancienEtatTechnique: EtatTechnique
  - nouveauEtatTechnique: EtatTechnique
  - dateChangement: LocalDateTime
  - motif: String
  - pieceJustificative: String
}

enum StatutAdministratif {
  DISPONIBLE
  AFFECTE
  RESERVE
  IMMOBILISE
  EN_ENTRETIEN
  EN_REPARATION
  ACCIDENTE
  EN_COURS_DE_REFORME
  REFORME
  ARCHIVE
}

enum EtatTechnique {
  NEUF
  BON_ETAT
  ETAT_MOYEN
  ENTRETIEN_NECESSAIRE
  ACCIDENTE
  EN_REPARATION
  HORS_SERVICE
}

enum TypeCarburant {
  DIESEL
  ESSENCE
  HYBRIDE
  ELECTRIQUE
}

BaseEntity <|-- Vehicule
Vehicule "1" *-- "0..*" HistoriqueStatutVehicule : historique
Vehicule --> StatutAdministratif
Vehicule --> EtatTechnique
Vehicule --> TypeCarburant

note bottom of Vehicule
  marque, modele, direction et service sont
  des champs texte, pas des entites dediees.
end note
@enduml
